_lib/observability/kube-prometheus-stack/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-internal
  namespace: monitoring
  labels:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: grafana-${ENVIRONMENT}
    environment: "${ENVIRONMENT}"
spec:
  parentRefs:
    - name: ${GATEWAY_NAME}
      namespace: networking
  hostnames:
    - "${GRAFANA_SUBDOMAIN}.home-0ps.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: monitoring-kube-prometheus-stack-grafana
          port: 80
